--- a/front_end/package.json
+++ b/front_end/package.json
@@ -24,8 +24,13 @@
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@reown/appkit": "^1.7.15",
+    "@reown/appkit-adapter-ethers": "^1.7.15",
+    "@reown/appkit-adapter-solana": "^1.7.15",
+    "@reown/appkit-adapter-wagmi": "^1.7.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "ethers": "^6.15.0",
     "framer-motion": "^12.23.6",
     "lucide-react": "^0.525.0",
     "next": "15.4.1",
