--- a/smart-contract/foundry.toml
+++ b/smart-contract/foundry.toml
@@ -2,4 +2,27 @@
 src = "src"
 out = "out"
 libs = ["lib"]
-auto_detect_remappings = false
+solc = "0.8.20"
+optimizer = true
+optimizer_runs = 200
+
+# RPC endpoints
+[rpc_endpoints]
+sepolia = "${SEPOLIA_RPC_URL}"
+core_testnet = "https://rpc.test2.btcs.network"
+core = "https://rpc.coredao.org"
+
+# Block explorers for verification
+[etherscan]
+sepolia = { key = "${ETHERSCAN_API_KEY}", url = "https://api-sepolia.etherscan.io/api" }
+core_testnet = { key = "${ETHERSCAN_API_KEY}", url = "https://api.test2.btcs.network/api" }
+core = { key = "${ETHERSCAN_API_KEY}", url = "https://openapi.coredao.org/api" }
+
+# Test configuration
+[profile.default.fuzz]
+runs = 256
+
+[profile.default.invariant]
+runs = 256
+depth = 15
+fail_on_revert = false
