--- a/front_end/package.json
+++ b/front_end/package.json
@@ -29,6 +29,11 @@
     "@reown/appkit-adapter-ethers": "^1.7.15",
     "@reown/appkit-adapter-solana": "^1.7.15",
     "@reown/appkit-adapter-wagmi": "^1.7.15",
+    "@reown/walletkit": "^1.3.0",
+    "@walletconnect/core": "^2.22.4",
+    "@walletconnect/types": "^2.22.4",
+    "@walletconnect/utils": "^2.22.4",
+    "@walletconnect/web3wallet": "^1.16.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "ethers": "^6.15.0",
